update schema and code
