# src/index.ts
@@ -1,14 +1,12 @@
 import cors from "cors";
 import express from "express";
 import swaggerUi from 'swagger-ui-express';
-
 import swaggerFile from '../swagger-output.json';
-import availabilityRoute from "./features/availability/availability.route";
 import brandRoute from "./features/brand/brand.route";
 import categoryRoute from "./features/category/category.route";
 import commonRoute from "./features/common/common.route";
 import productRoute from "./features/product/product.route";
-import specificationRoute from "./features/specification/specification.route";
+import specificationtypeRoute from "./features/specificationtype/specificationtype.route";
 import productVariantRoute from "./features/variant/productVariant.route";
 import { responseMiddleware } from "./middlewares/apiResponse";
 
@@ -23,10 +21,9 @@ app.use(responseMiddleware)
 app.use('/product', productRoute)
 app.use('/category', categoryRoute)
 app.use('/brand', brandRoute)
-app.use('/availability', availabilityRoute)
-app.use('/specification', specificationRoute)
 app.use('/variant', productVariantRoute)
 app.use('/common', commonRoute)
+app.use('/specificationtype', specificationtypeRoute)
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 
